Introduced basics parameters sweeps. Parameterized result recording. Minor refactoring.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -7,7 +7,7 @@
 # TODO: Seperate ini files
 network = Base
 sim-time-limit = 100s
-sim-time-limit.param-record-as-scalar = true # Doesn't seem to work
+sim-time-limit.param-record-as-scalar = true
 
 # Random Numbers
 #
@@ -35,11 +35,10 @@ num-rngs = 3
 # Host
 # TODO: Explore AODV example/code
 #
-#*.nodeMaster[*].hasStatus = false # Lifecycle
-#*.nodeMaster[*].energyStorageType = ""
-#*.nodeMaster[*].energyGeneratorType = ""
-*.nodeMaster**.numUdpApps = 1
-*.nodeSlave**.numUdpApps = 1
+#*.node**.hasStatus = false # Lifecycle
+#*.node**.energyStorageType = ""
+#*.node**.energyGeneratorType = ""
+*.node**.numUdpApps = 1
 
 # Application
 #
@@ -52,11 +51,12 @@ num-rngs = 3
 *.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
 *.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave"
 *.nodeSlave[*].udpApp[0].destPort = 5000
-*.nodeSlave[*].udpApp[0].messageLength = 128B
+*.nodeSlave[*].udpApp[0].messageLength = ${ML = 32, 64, 128, 256, 512}B
+**.udpApp[0].messageLength.param-record-as-scalar = true # Effects all 
 *.nodeSlave[*].udpApp[0].startTime = 0s
 # TODO: Adjust
 *.nodeSlave[*].udpApp[0].sendInterval = truncnormal(1s, 0.05s)
-#*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
+#*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (never)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
 #*.nodeSlave[*].udpApp[0].timeToLive = # Default -1 (forever)
@@ -71,30 +71,28 @@ num-rngs = 3
 #*.node**.forwarding = true # Redundant with AODV
 *.configurator.addStaticRoutes = false
 
-# NIC
-#*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
+# NIC (All nodes, incl. ground)
 #
 *.node**.wlan[*].typename = "WirelessNic"
 # --- MAC
 *.node**.macType = "CubeMacLayer"
 *.node**.mac.address = "auto"
 *.node**.mac.bitrate = 2Mbps
-*.node**.mac.slotDuration = 100ms
+*.node**.mac.slotDuration = ${SD = 10, 25, 50, 75, 100}ms
+**.mac.slotDuration.param-record-as-scalar = true
 *.node**.mac.headerLength = 10B
 *.node**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 *.node**.mac.numSlots = (${NM})+1 # +1 for the uplink slot
 # TODO: Adjust
-*.node**.mac.queueLength = 100 
-#*.node**mac.radioModule = "^.radio" # Path to radio module
+*.node**.mac.queueLength = 100
 # --- Added
 *.node**.mac.startTime = 0s
-*.node**.mac.slotPadding = 10ms
-*.node**.mac.timeoutDuration = 20ms
+*.node**.mac.slotPadding = ${SD}ms * 0.1
+*.node**.mac.timeoutDuration = ${SD}ms * 0.2
 # --- --- Cluster configuration
 *.nodeSlave**.mac.isSlave = true # Determines node behaviour mode
-*.nodeSlave**.mac.clusterId = 0 
-*.nodeMaster[0]**.mac.clusterId = 0 # Could be used to stop slaves from receiving from masters outside of cluster
-*.node**.mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
+**.mac.clusterId.param-record-as-scalar = true ## Effects all
+*.node**.mac.slavesInCluster = ${SPM} # Used to let Master know how many messages to expect during uplink slot
 # --- Radio
 *.node**.radioType = "IdealRadio"
 *.node**.radio.displayCommunicationRange = true
@@ -104,7 +102,7 @@ num-rngs = 3
 *.node**.radio.transmitter.headerBitLength = 0b
 *.node**.radio.transmitter.detectionRange = 999m
 *.node**.radio.transmitter.interferenceRange = 0m
-*.nodeSlave**.radio.transmitter.communicationRange = 100m
+*.nodeSlave**.radio.transmitter.communicationRange = 100m # Must also be set for ground
 *.nodeMaster**.radio.transmitter.communicationRange = 235m
 *.node**.radio.receiver.ignoreInterference = true
 
@@ -112,33 +110,47 @@ num-rngs = 3
 #
 # --- Masters
 *.nodeMaster[*].mobilityType = "CircleMobility"
-*.nodeMaster**.cx = 500m
-*.nodeMaster**.cy = 500m
-*.nodeMaster**.cz = 0m
+*.node**.cx = 500m
+*.node**.cy = 500m
+*.node**.cz = 0m
 *.nodeMaster**.r = 100m
 *.nodeMaster**.startAngle = parentIndex() * (360deg/${NM})
 # --- Slaves
 *.nodeSlave[*].mobilityType = "CircleMobility"
-*.nodeSlave**.cx = 500m
-*.nodeSlave**.cy = 500m
-*.nodeSlave**.cz = 0m
 *.nodeSlave**.r = 150m
+# TODO: Write general rule for all
 *.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
 *.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
 
 # Results
-# TODO: Check defaults
-# 
-**.statistic-recording = true
-**.scalar-recording = true
-**.vector-recording = true
-**.result-recording-modes = all
+#
+**.lo.**.scalar-recording = false
+**.arp.**.scalar-recording = false
+**.arp.**.vector-recording = false
+**.udp.**.scalar-recording = false
+**.udp.**.vector-recording = false
+**.radio.**.scalar-recording = false
+**.radio.**.vector-recording = false
+**.radioMedium.**.scalar-recording = false
+**.radioMedium.**.vector-recording = false
 
-# Hopefully will allow grouping of results by cluster
-**.mac.clusterId.param-record-as-scalar = true # Doesn't seem to work
+**.energyStorage.residualCapacity.vector-recording = true
+**.udpApp[*].endToEndDelay.scalar-recording = true
+**.udpApp[*].rcvdPk.vector-recording = true
+**.udpApp[*].rcvdPk.scalar-recording = true
+**.udpApp[*].rcvdPk.statistic-recording = true
+**.udpApp[*].sentPk.vector-recording = true
+**.udpApp[*].sentPk.scalar-recording = true
+**.udpApp[*].throughput.scalar-recording = true
+**.mac."MAC Access Delay".vector-recording = true
+# Everything on
+#**.statistic-recording = true
+#**.scalar-recording = true
+#**.vector-recording = true
+#**.result-recording-modes = all
 
 # Visualization
-# TODO: Examine visualizer documentation
+# TODO: Examine visualizer documentation further
 #
 #*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
@@ -150,27 +162,24 @@ num-rngs = 3
 #									#
 
 [Config FourClusters]
-# Must redefine and reuse all iteration variables
 extends = OneCluster
 
+# Must redefine cluster configuration iteration variables
 *.numMasters = ${NMF=4}
 *.numSlaves = ${NSF=(${NMF})*2}
 *.slavesPerMaster = ${SPMF=(${NSF}/${NMF})} # Dummy parameter
 
-# Works with Masters using Sinks and BasicsApps
-#*.nodeMaster[1..].udpApp[0].typename = "UDPSink"
-#*.nodeMaster[1..].udpApp[0].localPort = 5000
-
+# Apps
+#
+# TODO: Generalize further
 *.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
 *.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
 *.nodeMaster[1..].udpApp[0].packetName = "UDPDataMaster"
 *.nodeMaster[1..].udpApp[0].destPort = 5000
-*.nodeMaster[1..].udpApp[0].messageLength = 128B
+*.nodeMaster[1..].udpApp[0].messageLength = ${ML}B
 *.nodeMaster[1..].udpApp[0].startTime = 0s
 # TODO: Adjust
-*.nodeMaster[1..].udpApp[0].sendInterval = truncnormal(1s, 0.05s) 
-# Slave apps remains effectiviely unaltered
-*.nodeSlave[*].udpApp[0].sendInterval = truncnormal(1s, 0.05s)
+*.nodeMaster[1..].udpApp[0].sendInterval = truncnormal(1s, 0.05s)
 
 *.node**.mac.numSlots = (${NMF})+1 # +1 for the uplink slot
 *.node**.mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
@@ -179,7 +188,6 @@ extends = OneCluster
 *.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 75m
 *.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 225m
 
-# Just ensure we don't get index of wlan
 *.nodeSlave[..3]**clusterId = ancestorIndex(2)
 *.nodeSlave[4..]**clusterId = (ancestorIndex(2) - ${NMF})
 *.nodeMaster**clusterId = ancestorIndex(2) 
@@ -200,47 +208,33 @@ extends = OneCluster
 extends = FourClusters
 network = GroundStation
 
+*.numGround = 1
+
 # Need a reasonable height relative to obstacles
 *.node**.cz = 1.0m
 
 # Obstacles
 *.physicalEnvironment.config = xmldoc("walls.xml")
+# TODO: Check further params
 *.radioMedium.obstacleLossType = "IdealObstacleLoss"
 
-*.numGround = 1
-
-*.nodeGround**.numUdpApps = 1
 *.nodeGround[0].udpApp[0].typename = "UDPSink"
 *.nodeGround[0].udpApp[0].localPort = 5000
 
-# All orbiting nodes sending data
+# All orbiting nodes now sending data
+# TODO: Generalize further
 *.node**udpApp[0].typename = "UDPBasicApp"
 *.node**udpApp[0].destAddresses = "nodeGround[0]"
 *.node**udpApp[0].packetName = "UDPForGround"
 *.node**udpApp[0].destPort = 5000
-*.node**udpApp[0].messageLength = 128B
+*.node**udpApp[0].messageLength = ${ML}B
 *.node**udpApp[0].startTime = 0s
 # TODO: Adjust
 *.node**udpApp[0].sendInterval = truncnormal(1s, 0.05s)
 
 # NIC
 #
-*.nodeGround**.typename = "WirelessNic"
-# MAC
-*.nodeGround**.macType = "CubeMacLayer"
-*.nodeGround**.mac.address = "auto"
-*.nodeGround**.mac.bitrate = 2Mbps # TODO: What is bitrate inheritence pattern?
-*.nodeGround**.mac.slotDuration = 100ms
-*.nodeGround**.mac.headerLength = 10B
-*.nodeGround**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-# Must change for all nodes in network
-**.mac.numSlots = (${NMF})+2 # +1 for the uplink slot # +1 for ground (acting like a master)
-# TODO: Adjust
-*.nodeGround**.mac.queueLength = 100 
-
-*.nodeGround**.mac.slotPadding = 10ms
-*.nodeGround**.mac.startTime = 0s
-*.nodeGround**.mac.timeoutDuration = 20ms
+**.mac.numSlots = (${NMF})+2 # +1 for ground (acting like an extra master)
 
 # Ground has to be able to participate in route negotiation
 # TODO: Investiage differing approaches
@@ -248,17 +242,8 @@ network = GroundStation
 **.mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
 
 # Radio
-*.nodeGround**.radioType = "IdealRadio"
 **.radio.displayCommunicationRange = false
-
-*.nodeGround**.radio.transmitter.bitrate = 2Mbps
-*.nodeGround**.radio.transmitter.preambleDuration = 0s
-*.nodeGround**.radio.transmitter.headerBitLength = 0b
-*.nodeGround**.radio.transmitter.detectionRange = 999m
-*.nodeGround**.radio.transmitter.interferenceRange = 0m
 *.nodeGround**.radio.transmitter.communicationRange = 300m
-
-*.nodeGround**.radio.receiver.ignoreInterference = true
 
 # Mobility
 *.nodeGround**mobilityType = "StationaryMobility"
