Further parameterization of AODV which reflect TDMA configuration

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -33,11 +33,8 @@ num-rngs = 3
 *.radioMedium.**.propagationTime = 0s
 
 # Host
-# TODO: Explore AODV example/code
 #
 #*.node**.hasStatus = false # Lifecycle
-#*.node**.energyStorageType = ""
-#*.node**.energyGeneratorType = ""
 *.node**.numUdpApps = 1
 
 # Application
@@ -51,9 +48,10 @@ num-rngs = 3
 *.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
 *.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave"
 *.nodeSlave[*].udpApp[0].destPort = 5000
-*.nodeSlave[*].udpApp[0].messageLength = ${ML = 32, 64, 128, 256, 512}B
+#*.nodeSlave[*].udpApp[0].messageLength = ${ML = 32, 64, 128, 256, 512}B
+*.nodeSlave[*].udpApp[0].messageLength = ${ML = 128}B
 **.udpApp[0].messageLength.param-record-as-scalar = true # Effects all 
-*.nodeSlave[*].udpApp[0].startTime = 0s
+*.nodeSlave[*].udpApp[0].startTime = ${SD} * ${NM} * 5ms # Five frames
 # TODO: Adjust
 *.nodeSlave[*].udpApp[0].sendInterval = truncnormal(1s, 0.05s)
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (never)
@@ -61,14 +59,13 @@ num-rngs = 3
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
 #*.nodeSlave[*].udpApp[0].timeToLive = # Default -1 (forever)
 
-# Network
+# Networking
 #
 # --- Basic static routing
 #**.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
 #**.configurator.optimizeRoutes = false
 #**.routingTable.netmaskRoutes = ""
 # --- AODV adjustments
-#*.node**.forwarding = true # Redundant with AODV
 *.configurator.addStaticRoutes = false
 
 # NIC (All nodes, incl. ground)
@@ -78,7 +75,8 @@ num-rngs = 3
 *.node**.macType = "CubeMacLayer"
 *.node**.mac.address = "auto"
 *.node**.mac.bitrate = 2Mbps
-*.node**.mac.slotDuration = ${SD = 10, 25, 50, 75, 100}ms
+#*.node**.mac.slotDuration = ${SD = 10, 25, 50, 75, 100}ms
+*.node**.mac.slotDuration = ${SD = 100}ms
 **.mac.slotDuration.param-record-as-scalar = true
 *.node**.mac.headerLength = 10B
 *.node**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
@@ -157,9 +155,9 @@ num-rngs = 3
 #*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
-#									#
-# 			FourClusters			#
-#									#
+					#									#
+					# 			FourClusters			#
+					#									#
 
 [Config FourClusters]
 extends = OneCluster
@@ -171,13 +169,12 @@ extends = OneCluster
 
 # Apps
 #
-# TODO: Generalize further
 *.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
 *.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
 *.nodeMaster[1..].udpApp[0].packetName = "UDPDataMaster"
 *.nodeMaster[1..].udpApp[0].destPort = 5000
 *.nodeMaster[1..].udpApp[0].messageLength = ${ML}B
-*.nodeMaster[1..].udpApp[0].startTime = 0s
+*.nodeSlave[*].udpApp[0].startTime = ${SD} * ${NMF} * 5ms # Five frames
 # TODO: Adjust
 *.nodeMaster[1..].udpApp[0].sendInterval = truncnormal(1s, 0.05s)
 
@@ -200,9 +197,9 @@ extends = OneCluster
 *.nodeSlave[..3]**.startAngle = (parentIndex() * (360deg/${NMF})) + 7deg
 *.nodeSlave[4..]**.startAngle = (parentIndex() * (360deg/${NMF})) - 7deg
 
-#									#
-# 			GroundStation			#
-#									#
+					#									#
+					# 			GroundStation			#
+					#									#
 
 [Config GroundStation]
 extends = FourClusters
@@ -228,13 +225,13 @@ network = GroundStation
 *.node**udpApp[0].packetName = "UDPForGround"
 *.node**udpApp[0].destPort = 5000
 *.node**udpApp[0].messageLength = ${ML}B
-*.node**udpApp[0].startTime = 0s
+*.nodeSlave[*].udpApp[0].startTime = ${SD} * (${NMF} + 1) * 5ms # Five frames
 # TODO: Adjust
 *.node**udpApp[0].sendInterval = truncnormal(1s, 0.05s)
 
 # NIC
 #
-**.mac.numSlots = (${NMF})+2 # +1 for ground (acting like an extra master)
+**.mac.numSlots = ${NMF} + 2 # +1 for ground (acting like an extra master)
 
 # Ground has to be able to participate in route negotiation
 # TODO: Investiage differing approaches
@@ -242,7 +239,7 @@ network = GroundStation
 **.mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
 
 # Radio
-**.radio.displayCommunicationRange = false
+**.radio.displayCommunicationRange = true
 *.nodeGround**.radio.transmitter.communicationRange = 300m
 
 # Mobility
@@ -252,18 +249,57 @@ network = GroundStation
 *.nodeGround**initialY = 460m
 *.nodeGround**initialZ = 1.0m
 
-#											#
-#			FourClustersGSMoving			#
-#											#
+#*.node**aodv.routingTableModule = "^.routingTable" # Defualt 	
+#*.node**.aodv.interfaceTableModule = "^.interfaceTable"	# Defualt 
+#*.node**.aodv.networkProtocolModule	= "^.networkLayer.ip" # Defualt 
+*.node**.aodv.askGratuitousRREP = true	 # see RFC 3561: 6.6.3
+*.node**.aodv.useHelloMessages = false	# see RFC 3561: 6.9 # Default false --- An analogue for beacons perhaps ---
+#*.node**.aodv.useLocalRepair = false # see RFC 3561: 6.12 --- not implemented yet ---
+#*.node**.aodv.udpPort = 654	
+## it MUST NOT be negative; it MUST NOT be greater than MESSAGE_INTERVAL/2; it SHOULD NOT be greater (less???) than MESSAGE_INTERVAL/4.
+#*.node**.aodv.maxPeriodicJitter = ${maxPeriodicJitter=(${helloInterval} * 0.25)s}
+# jitter for externally triggered message generation and message forwarding
+#*.node**.aodv.periodicJitter = uniform(0s, ${maxPeriodicJitter}) 
+# RFC 5148: need more revise: As well as the decision as to whether to use jitter being dependent on the medium access control and lower layers, 
+# the selection of the MAXJITTER parameter SHOULD be appropriate to those mechanisms.
+#*.node**.aodv.maxJitter = ${maxJitter=5ms} 
+#*.node**.aodv.jitter = uniform(0ms, ${maxJitter}) # jitter for broadcasts
+*.node**.aodv.helloInterval = 2 * (${NMF} + 2) * ${SD}ms # every helloInterval seconds a node broadcasts Hello messages (if it is necessary)
+#*.node**.aodv.allowedHelloLoss	= 2	# allowedHelloLoss * helloInterval is the lifetime value for Hello messages
+# the timeout value for cached routes If Hello messages are used, 
+# then the ACTIVE_ROUTE_TIMEOUT parameter value MUST be more than the value (ALLOWED_HELLO_LOSS * HELLO_INTERVAL).
+*.node**.aodv.activeRouteTimeout = 25 * (${NMF} + 2) * ${SD}ms # NB 25 Frames 
+*.node**.aodv.netDiameter = 32 # the maximum possible number of hops between two nodes in the network
+*.node**.aodv.nodeTraversalTime = (${NMF} + 2) * ${SD}ms # an estimation of the average one-hop traversal time
+#*.node**.aodv.rerrRatelimit = 10 # maximum number of RERR messages that the AODV may originate in 1s.
+*.node**.aodv.rreqRetries = 3 # specifies the number of times AODV will repeat an expanded ring search for a destination
+#*.node**.aodv.rreqRatelimit = 10 # maximum number of RREQ messages that the AODV may originate in 1s.
+#*.node**.aodv.timeoutBuffer = 2 # plus time to wait for a delayed RREP (due to congestion) (to omit this buffer set it to 0)
+*.node**.aodv.ttlStart = 5 # specifies the TTL value when initiating a route request
+#*.node**.aodv.ttlIncrement = 2	# specifies the value by which the TTL will be incremented each time a RREQ is retransmitted
+*.node**.aodv.ttlThreshold = 10	# the maximum value of TTL over which NET_DIAMETER value will be used to broadcast any RREQ
+#*.node**.aodv.localAddTTL = 2 # it is used by the formula which calculates the initial TTL of the RREQ for a local repair
+
+# Cannot define iteration variables by other iteration variables OMNeT? slavePerMaster works fine but these fall over
+#*.node**.aodv.myRouteTimeout = 2 * activeRouteTimeout # the value of the lifetime field that a destination node places in RREPs
+#*.node**.aodv.deletePeriod = 5 * max(activeRouteTimeout, helloInterval) # the time after which an expired route is deleted
+#*.node**.aodv.netTraversalTime = 2 * nodeTraversalTime * netDiameter # an estimation of the traversal time for the complete network
+#*.node**.aodv.blacklistTimeout = rreqRetries * netTraversalTime # the time after which a blacklisted node is removed from the blacklist
+#*.node**.aodv.nextHopWait = nodeTraversalTime + 0.01s # timeout for a RREP-ACK
+#*.node**.aodv.pathDiscoveryTime = 2 * netTraversalTime # buffer timeout for each broadcasted RREQ message
+
+					#											#
+					#			OrbitingGroundStation			#
+					#											#
 
 [Config OrbitingGroundStation]
 extends = GroundStation
 **nodeMaster**.speed = 1.125mps
 **nodeSlave**.speed = 1.5mps
 
-#									#
-#			EnergyModelling			#
-#									#
+					#									#
+					#			EnergyModelling			#
+					#									#
 
 [Config EnergyModelling]
 extends = OrbitingGroundStation
@@ -282,10 +318,9 @@ extends = OrbitingGroundStation
 *.node**.radio.energyConsumer.transmitterIdlePowerConsumption = 2mW
 *.node**.radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
 
-
-#								#
-#			APSKRadio			#
-#								#
+					#								#
+					#			APSKRadio			#
+					#								#
 
 # Currently not allowing 'simultaneous' reception
 [Config APSKRadio]
